Update API request & responces. MultiCreate() returns array of ids
